--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="shortcut icon" href="./images/my_logo.png">
-    <title>Users</title>
+    <title>Users_Posts_Comments</title>
   </head>
   <body>
 
